<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="23sp"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:id="@+id/lin_lay_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/bg_button">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/country_code"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@android:color/black" />


        <EditText
            android:id="@+id/edt_mobile_num"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edt_mob_num"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_otp"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@id/lin_lay_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:hint="@string/edt_otp" />


    <Button
        android:id="@+id/btn_send_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_otp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btn_send"
        android:textColor="@android:color/black" />

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_send_otp"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:max="60"
        android:minHeight="50dp"
        android:minWidth="100dp"
        android:progress="0"
        android:progressTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_bar_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

</RelativeLayout>